updates no video

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <div id="chart-container">
             </div>
             
-            <!-- Video container below chart -->
+            <!-- Video container below chart
             <div class="video-container">
                 <video class="video-player" src="anta2.MP4" type="video/MP4" loop muted controls>
                 </video>
-            </div>
+            </div>  -->
         </div>
         
         <!-- Map container on the side -->
